Add net framework project

--- a/Personal.IdentityServer6Demo/Personal.IdentityServer6Demo.IdP/Personal.IdentityServer6Demo.IdP.csproj
+++ b/Personal.IdentityServer6Demo/Personal.IdentityServer6Demo.IdP/Personal.IdentityServer6Demo.IdP.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Duende.IdentityServer" Version="6.1.2" />
+    <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.2.2" />
+    <PackageReference Include="Microsoft.Owin.Security.Cookies" Version="4.2.2" />
+    <PackageReference Include="Microsoft.Owin.Security.OpenIdConnect" Version="4.2.2" />
   </ItemGroup>
 
 </Project>
